Bug 97495 - Tooltip is not aligned with its UI element
Summary: Tooltip is not aligned with its UI element
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Formula Editor (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: All Linux (All)
: medium trivial
Assignee: Not Assigned
URL:
Whiteboard: target:5.2.0 target:5.1.1
Keywords:
Depends on:
Blocks:
 
Reported: 2016-02-02 03:25 UTC by José Guilherme Vanz
Modified: 2016-10-25 19:11 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
The image of the problem (65.13 KB, image/png)
2016-02-02 03:25 UTC, José Guilherme Vanz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description José Guilherme Vanz 2016-02-02 03:25:40 UTC
Created attachment 122323 [details]
The image of the problem

In the elements sidebar, if user moves the cursor to next item in the sidebar while a tooltip is being shown the text is updated but the tooltip keeps at the same place. It is not being rendered beside the element where cursor is.

To simulate:
    1. Move cursor to cosh() item in functions category
    2. While the tooltip is being shown, move the cursor to cot() item.

You will notice the tooltip keeps beside of cosh() item, but it shows text of cot() item.
Comment 1 Samuel Mehrbrodt 2016-02-02 08:29:11 UTC
Seems to be a GTK3 issue.
Comment 2 Commit Notification 2016-02-02 11:33:27 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f6c3c942976d615972674c5a5e12337d07be104c

Resolves: tdf#97495 fix SmElementsControl tooltips

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2016-02-02 11:35:43 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=51fd7649432aeb7a6cb5cbf3cec1e94b08412248&h=libreoffice-5-1

Resolves: tdf#97495 fix SmElementsControl tooltips

It will be available in 5.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.