Resolves: tdf#97495 fix SmElementsControl tooltips

instead of setting a single tooltip for the whole
panel area, wait for a tooltip request and specify
the area to which it applies.

Which is what other widgets that have different
tooltip areas do, and maps much better to the gtk3
tooltip system which functions like that too.

Change-Id: I56f452562c3c4d9dcec4109a8ee6168f34619472